// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render <h1> tag 1`] = `
<h1
  class="StyledHeading-fbinjh-0 hzBXbZ"
  color="default"
>
  children
</h1>
`;

exports[`<Text /> should render <h2> tag 1`] = `
<h2
  class="StyledHeading-fbinjh-0 dWlKlp"
  color="default"
>
  children
</h2>
`;

exports[`<Text /> should render <h3> tag 1`] = `
<h3
  class="StyledHeading-fbinjh-0 xKNyj"
  color="default"
>
  children
</h3>
`;

exports[`<Text /> should render <h4> tag 1`] = `
<h4
  class="StyledHeading-fbinjh-0 cAjwaM"
  color="default"
>
  children
</h4>
`;

exports[`<Text /> should render <h5> tag 1`] = `
<h5
  class="StyledHeading-fbinjh-0 gBLxCR"
  color="default"
>
  children
</h5>
`;

exports[`<Text /> should render <h6> tag 1`] = `
<h6
  class="StyledHeading-fbinjh-0 cBzjhI"
  color="default"
>
  children
</h6>
`;

exports[`<Text /> should render correctly with custom props 1`] = `
<h3
  class="StyledHeading-fbinjh-0 gWTzhq"
  color="primary"
>
  children
</h3>
`;

exports[`<Text /> should render correctly with default props 1`] = `
<h1
  class="StyledHeading-fbinjh-0 hzBXbZ"
  color="default"
>
  children
</h1>
`;

exports[`<Text /> should render should large <h6> heading 1`] = `
<h6
  class="StyledHeading-fbinjh-0 hzBXbZ"
  color="default"
>
  children
</h6>
`;
